[tool.poetry]
name = "pyseal"
version = "0.1.0"
description = "Python SEAL"
authors = ["Seungwoo Jung <seungwoo.jung@desilo.ai>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.22.4"
pybind11 = "^2.9.2"

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11>=2.9.1",
]

build-backend = "setuptools.build_meta"
